k8s-deploy-files/developer-site-deployment.yaml
kind: Deployment
apiVersion: extensions/v1beta1
metadata:
  name: developer-site
spec:
  replicas: 1
  template:
    metadata:
      labels:
        name: developer-site
    spec:
      containers:
        - name: developer-site
          image: 'umasuo/developer-site:1.0.0'
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
