k8s-deploy-files/api-gateway-developer.yaml
kind: List
apiVersion: v1
items:
- kind: Deployment
  apiVersion: extensions/v1beta1
  metadata:
    name: api-gateway-developer
  spec:
    replicas: 1
    template:
      metadata:
        labels:
          name: api-gateway-developer
      spec:
        containers:
        - name: api-gateway-developer
          image: evacloud/api-gateway-developer:0.1
          imagePullPolicy: Always
          ports:
          - containerPort: 80
- kind: Service
  apiVersion: v1
  metadata:
    name: api-gateway-developer
    labels:
      name: api-gateway-developer
  spec:
    type: LoadBalancer
    ports:
    - port: 80
      nodePort: 30129
    selector:
      name: api-gateway-developer
