k8s-deploy-files/data-center.yaml
kind: List
apiVersion: v1
items:
- kind: Deployment
  apiVersion: extensions/v1beta1
  metadata:
    name: data-center
  spec:
    replicas: 1
    template:
      metadata:
        labels:
          name: data-center
      spec:
        containers:
        - name: data-center
          image: umasuo/data-center:0.1
          imagePullPolicy: Always
          ports:
          - containerPort: 80
- kind: Service
  apiVersion: v1
  metadata:
    name: data-center
    labels:
      name: data-center
  spec:
    type: NodePort
    ports:
    - port: 80
      targetPort: 80
      nodePort: 30101
    selector:
      name: data-center
