k8s-deploy-files/data-definition.yaml
kind: List
apiVersion: v1
items:
- kind: Deployment
  apiVersion: extensions/v1beta1
  metadata:
    name: data-definition
  spec:
    replicas: 1
    template:
      metadata:
        labels:
          name: data-definition
      spec:
        containers:
        - name: data-definition
          image: evacloud/data-definition:0.1
          imagePullPolicy: Always
          ports:
          - containerPort: 80
- kind: Service
  apiVersion: v1
  metadata:
    name: data-definition
    labels:
      name: data-definition
  spec:
    type: NodePort
    ports:
    - port: 80
      targetPort: 80
      nodePort: 30102
    selector:
      name: data-definition
