k8s-deploy-files/developer.yaml
kind: List
apiVersion: v1
items:
- kind: Deployment
  apiVersion: extensions/v1beta1
  metadata:
    name: developer
  spec:
    replicas: 1
    template:
      metadata:
        labels:
          name: developer
      spec:
        containers:
        - name: developer
          image: evacloud/developer:0.1
          imagePullPolicy: Always
          ports:
          - containerPort: 80
- kind: Service
  apiVersion: v1
  metadata:
    name: developer
    labels:
      name: developer
  spec:
    type: NodePort
    ports:
    - port: 80
      targetPort: 80
      nodePort: 30104
    selector:
      name: developer
