k8s-deploy-files/device.yaml
kind: List
apiVersion: v1
items:
- kind: Deployment
  apiVersion: extensions/v1beta1
  metadata:
    name: device
  spec:
    replicas: 1
    template:
      metadata:
        labels:
          name: device
      spec:
        containers:
        - name: device
          image: evacloud/device-center:0.2
          imagePullPolicy: Always
          ports:
          - containerPort: 80
- kind: Service
  apiVersion: v1
  metadata:
    name: device
    labels:
      name: device
  spec:
    type: NodePort
    ports:
    - port: 80
      targetPort: 80
      nodePort: 30106
    selector:
      name: device
