k8s-deploy-files/feedback.yaml
kind: List
apiVersion: v1
items:
- kind: Deployment
  apiVersion: extensions/v1beta1
  metadata:
    name: feedback
  spec:
    replicas: 1
    template:
      metadata:
        labels:
          name: feedback
      spec:
        containers:
        - name: feedback
          image: evacloud/feedback:0.1
          imagePullPolicy: Always
          ports:
          - containerPort: 80
- kind: Service
  apiVersion: v1
  metadata:
    name: feedback
    labels:
      name: feedback
  spec:
    type: NodePort
    ports:
    - port: 80
      targetPort: 80
      nodePort: 30110
    selector:
      name: feedback
