k8s-deploy-files/file.yaml
kind: List
apiVersion: v1
items:
- kind: Deployment
  apiVersion: extensions/v1beta1
  metadata:
    name: file
  spec:
    replicas: 1
    template:
      metadata:
        labels:
          name: file
      spec:
        containers:
        - name: file
          image: umasuo/file-service:0.1
          imagePullPolicy: Always
          ports:
          - containerPort: 80
- kind: Service
  apiVersion: v1
  metadata:
    name: file
    labels:
      name: file
  spec:
    type: NodePort
    ports:
    - port: 80
      targetPort: 80
      nodePort: 30107
    selector:
      name: file
