k8s-deploy-files/marketing-site.yaml
kind: List
apiVersion: v1
items:
- kind: Deployment
  apiVersion: extensions/v1beta1
  metadata:
    name: marketing-site
  spec:
    replicas: 1
    template:
      metadata:
        labels:
          name: marketing-site
      spec:
        containers:
          - name: marketing-site
            image: 'evacloud/marketing-site:1.0.0'
            imagePullPolicy: Always
            ports:
            - containerPort: 3000
- kind: Service
  metadata:
    name: marketing-site
    labels:
      name: marketing-site
  spec:
    type: LoadBalancer
    ports:
      - port: 80
        targetPort: 3000
        nodePort: 30301
    selector:
      name: marketing-site
