k8s-deploy-files/mqtt.yaml
kind: List
apiVersion: v1
items:
- kind: Deployment
  apiVersion: extensions/v1beta1
  metadata:
    name: message-broker
  spec:
    replicas: 1
    template:
      metadata:
        labels:
          name: message-broker
      spec:
        containers:
        - name: message-broker
          image: evacloud/message-broker:1.1
          imagePullPolicy: Always
          ports:
          - containerPort: 1883
          - containerPort: 18083
- kind: Service
  apiVersion: v1
  metadata:
    name: message-broker
    labels:
      name: message-broker
  spec:
    type: LoadBalancer
    ports:
    - name: broker
      port: 1883
      targetPort: 1883
      nodePort: 30132
    - name: dashboard
      port: 18083
      targetPort: 18083
      nodePort: 30133
    selector:
      name: message-broker
