k8s-deploy-files/pg.yaml
kind: List
apiVersion: v1
items:
- kind: Deployment
  apiVersion: extensions/v1beta1
  metadata:
    name: eva-data
  spec:
    replicas: 1
    template:
      metadata:
        labels:
          name: eva-data
      spec:
        containers:
        - name: eva-data
          image: umasuo/postgres:0.2
          imagePullPolicy: Always
          ports:
          - containerPort: 5432
- kind: Service
  apiVersion: v1
  metadata:
    name: eva-data
    labels:
      name: eva-data
  spec:
    type: NodePort
    ports:
    - port: 5432
      nodePort: 30130
    selector: 
      name: eva-data
