k8s-deploy-files/product.yaml
kind: List
apiVersion: v1
items:
- kind: Deployment
  apiVersion: extensions/v1beta1
  metadata:
    name: product
  spec:
    replicas: 1
    template:
      metadata:
        labels:
          name: product
      spec:
        containers:
        - name: product
          image: evacloud/product:0.3
          imagePullPolicy: Always
          ports:
          - containerPort: 80
- kind: Service
  apiVersion: v1
  metadata:
    name: product
    labels:
      name: product
  spec:
    type: NodePort
    ports:
    - port: 80
      targetPort: 80
      nodePort: 30105
    selector:
      name: product
