k8s-deploy-files/report.yaml
kind: List
apiVersion: v1
items:
- kind: Deployment
  apiVersion: extensions/v1beta1
  metadata:
    name: report
  spec:
    replicas: 1
    template:
      metadata:
        labels:
          name: report
      spec:
        containers:
        - name: report
          image: umasuo/report:0.1
          imagePullPolicy: Always
          ports:
          - containerPort: 80
- kind: Service
  apiVersion: v1
  metadata:
    name: report
    labels:
      name: report
  spec:
    type: NodePort
    ports:
    - port: 80
      targetPort: 80
      nodePort: 30111
    selector:
      name: report
