k8s-deploy-files/user.yaml
kind: List
apiVersion: v1
items:
- kind: Deployment
  apiVersion: extensions/v1beta1
  metadata:
    name: user
  spec:
    replicas: 1
    template:
      metadata:
        labels:
          name: user
      spec:
        containers:
        - name: user
          image: umasuo/user:0.1
          imagePullPolicy: Always
          ports:
          - containerPort: 80
- kind: Service
  apiVersion: v1
  metadata:
    name: user
    labels:
      name: user
  spec:
    type: NodePort
    ports:
    - port: 80
      targetPort: 80
      nodePort: 30109
    selector:
      name: user
