k8s-deploy-files/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: umasuo-router
spec:
  rules:
  - http:
      paths:
      - path: /*
        backend:
          serviceName: customer-authentication
          servicePort: 80
